Mantis ChangeLog

2003.??.??  -  0.18.0a3

 * Enhancement: When an enumeration is not found, display @<enumid>@ instead of @null@.
 * Enhancement: Added file type icons next to project documents and bug file attachments.  Also provided a set of standard icons.
 * Fix: META redirects were not XHTML-compliant
 * Fix: $g_lang_current was not available to custom_strings_inc.php
 * Fix: reduced the executed number of queries throughout the interface
 * Fix: improved handling of bad cookies (you now get a chance to log in again)
 * Fix: Added the removal of invalid history entries that were added due to escaping errors to the string escaping fixes.
 * Fix: Improve speed of actions that trigger email sends by reducing the number of queries by 200x (20,000%). Queries when sending emails are now linear to the number of users receiving the email instead of the number of users in the system.
 * Fix #2944: Project files are not deleted when project is deleted.
 * Fix #2939: Confusing file names for uploaded project documents.
 * Fix #2953: View all bugs page empty (temporary fix by disabling compression when running on an IIS server).
 * Fix #2954: Bgcolor attribute on TD in view_all_bug_page (moved to TR) [optimisation]
 * Fix #2956: db_insert_id() did not use mysql_insert_id(), but executed another query (which is probably slower)
 * Fix #2961: A disabled project can not be the currently selected project
 * Fix #2964: proj_doc_add.php is empty if document file already exists
 * Fix #2967: Make bugnotes visible while updating bugs (updating, resolving, and closing)
 * Fix #2968: Add query counts to action pages.
 * Fix #2969: Bug not found error when deleting a bugnote.
 * Fix #2970: Sending a reminder sends two notifications.
 * Fix #2974: Message "APPLICATION WARNING #300" on main page.
 * Fix #2975: 'date modified' column of bug history in email is to tight.
 * Fix #2976: Incorrect handling of URLs.
 * Fix #2978: URLs not hyperlinked in news_add page.